[gd_scene load_steps=6 format=3 uid="uid://cdi0awa4w3shv"]

[ext_resource type="Script" uid="uid://bh42l1y4jmc2o" path="res://Scripts/detective.gd" id="1_5vuio"]
[ext_resource type="Texture2D" uid="uid://bnokhiltk4x3q" path="res://Assets/art/speech_bubble.png" id="2_8u120"]
[ext_resource type="FontFile" uid="uid://b52chdl5ratcq" path="res://Assets/fonts/monogram.ttf" id="3_dmdfp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxt61"]
size = Vector2(80, 50)

[sub_resource type="CanvasTexture" id="CanvasTexture_jxt61"]

[node name="detective" type="Area2D" groups=["detective"]]
script = ExtResource("1_5vuio")

[node name="dectective_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jxt61")

[node name="detective_sprite" type="Sprite2D" parent="dectective_collider"]
position = Vector2(7.1525574e-07, -9.536743e-07)
scale = Vector2(42, 50)
texture = SubResource("CanvasTexture_jxt61")

[node name="speech_bubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(86.437515, -55.125)
scale = Vector2(1.3242185, 1.143229)
texture = ExtResource("2_8u120")

[node name="speech_text" type="RichTextLabel" parent="speech_bubble"]
offset_left = -22.230103
offset_top = -29.630983
offset_right = 32.896748
offset_bottom = 7.981779
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_dmdfp")
text = "Want my notes?"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
